[package]
name = "interval_map"
version = "0.1.0"
edition = "2021"
authors = ["feathercyc feathercyc@163.com"]
description = "`interval_map` is a map based on interval tree."
license = "Apache-2.0"
keywords = ["Interval Tree", "Augmented Tree", "Red-Black Tree"]

[dependencies]
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "std",
], optional = true }

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"
serde_json = "1.0"

[features]
default = []
graphviz = []
serde = ["dep:serde"]

[[bench]]
name = "bench"
path = "benches/bench.rs"
harness = false
