[package]
name = "rb-interval-map"
version = "0.1.2"
edition = "2021"
authors = ["feathercyc feathercyc@163.com"]
description = "`rb-interval-map` is a map based on interval tree."
repository = "https://github.com/xline-kv/interval_map"
license = "Apache-2.0"
keywords = ["IntervalTree", "AugmentedTree", "RedBlackTree"]
documentation = "https://docs.rs/rb-interval-map"
homepage = "https://github.com/xline-kv/interval_map"

[dependencies]
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "std",
], optional = true }

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"
serde_json = "1.0"

[features]
default = []
graphviz = []
serde = ["dep:serde"]

[[bench]]
name = "bench"
path = "benches/bench.rs"
harness = false
